# lbo-simulator

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default_tranches.yaml  lbo_config.yaml
examples/: custom_tranches.ipynb  quickstart.ipynb
src/lbo_simulator/: __init__.py
src/lbo_simulator/data/: __init__.py  providers.py  synthetic.py
src/lbo_simulator/models/: __init__.py  covenants.py  debt_tranche.py  lbo_engine.py  schemas.py
src/lbo_simulator/optimization/: __init__.py  capital_structure.py
src/lbo_simulator/reporting/: __init__.py  excel_export.py  pdf_export.py
src/lbo_simulator/scripts/: __init__.py  optimize_structure.py  run_lbo.py
src/lbo_simulator/utils/: config_loader.py  financial_math.py  logging_config.py
streamlit_app/: app.py
streamlit_app/.streamlit/: config.toml
tests/: conftest.py  test_config_loader.py  test_covenants.py  test_debt_tranche.py  test_financial_math.py  test_lbo_engine.py  test_optimizer.py  test_synthetic_data.py
